Add VSCode settings

--- a/vscode-settings.json
+++ b/vscode-settings.json
@@ -1,39 +1,35 @@
 {
+  // Appearance settings
   "workbench.colorTheme": "Night Owl",
-  "terminal.integrated.fontFamily": "Meslo LG M for Powerline",
-  "editor.fontFamily": "FiraCode-Retina",
+  "editor.fontFamily": "'JetBrainsMonoNL Nerd Font Mono'",
   "editor.fontWeight": "400",
   "editor.fontLigatures": false,
-  "editor.fontSize": 12,
+  "editor.fontSize": 15,
   "editor.rulers": [120],
-  "editor.suggestSelection": "first",
-  "editor.suggest.showSnippets": true,
-  "editor.suggest.localityBonus": true,
-  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-  "editor.formatOnSave": true,
-  "editor.wordWrapColumn": 120,
-  "files.defaultLanguage": "{activeEditorLanguage}",
-  "editor.cursorSmoothCaretAnimation": "on",
-  "editor.smoothScrolling": true,
-  "explorer.confirmDragAndDrop": false,
-  "editor.renderWhitespace": "boundary",
   "editor.bracketPairColorization.enabled": true,
-  "editor.acceptSuggestionOnCommitCharacter": false,
-  // javascript
-  "npm.runSilent": true,
-  "search.exclude": {
-    "**/node_modules": true,
-    "**/bower_components": true,
-    "**/coverage": true,
-    "**/dist": true,
-    "**/build": true,
-    "**/.build": true,
-    "**/.gh-pages": true
+  "editor.guides.bracketPairs": "active",
+  "terminal.integrated.fontSize": 14,
+  "editor.wordWrap": "on",
+
+  // General coding
+  "editor.formatOnSave": true,
+  "editor.formatOnPaste": true,
+  "editor.linkedEditing": true,
+  "editor.inlineSuggest.enabled": true,
+  "editor.parameterHints.enabled": true,
+  "editor.suggestSelection": "first",
+
+  // ESLint
+  "eslint.validate": ["javascript", "typescriptreact", "javascriptreact"],
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
   },
+
+  // Extensions
+  "extensions.autoCheckUpdates": true,
+
+  // Language specific
   "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[javascriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[typescript]": {
@@ -42,75 +38,13 @@
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "javascript.updateImportsOnFileMove.enabled": "always",
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "[jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
   "[prisma]": {
     "editor.defaultFormatter": "Prisma.prisma"
   },
-  "eslint.validate": [
-    "javascript",
-    "javascriptreact",
-    "typescript",
-    "typescriptreact"
-  ],
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
-  },
-  "terminal.integrated.inheritEnv": false,
-  "diffEditor.ignoreTrimWhitespace": false,
-  "typescript.updateImportsOnFileMove.enabled": "always",
 
-  // python
-  "[python]": {
-    "editor.rulers": [79, 120],
-    "editor.formatOnType": true
-  },
-  "editor.formatOnPaste": true,
-  "vim.insertModeKeyBindings": [
-    {
-      "before": ["j", "j"],
-      "after": ["<esc>"]
-    }
-  ],
-  "todo-tree.tree.showScanModeButton": false,
-  "editor.minimap.enabled": false,
-  "editor.tabSize": 2,
-  "editor.cursorStyle": "line",
-  "editor.insertSpaces": false,
-  "editor.lineNumbers": "on",
-  "editor.wordSeparators": "/\\()\"':,.;<>~!@#$%^&*|+=[]{}`?-",
-  "redhat.telemetry.enabled": false,
-  "editor.inlineSuggest.enabled": true,
-  "github.copilot.enable": {
-    "*": true,
-    "plaintext": true,
-    "markdown": true,
-    "scminput": false,
-    "yaml": true,
-    "javascript": true,
-    "typescriptreact": true
-  },
-  "editor.multiCursorModifier": "ctrlCmd",
-  "javascript.preferences.importModuleSpecifier": "non-relative",
-  "emmet.includeLanguages": {
-    "javascript": "javascriptreact",
-    "typescript": "typescriptreact"
-  },
-  "emmet.triggerExpansionOnTab": true,
-  "prettier.proseWrap": "always",
-  "security.workspace.trust.untrustedFiles": "open",
-  "workbench.editor.revealIfOpen": false,
-  "playwright.reuseBrowser": true,
-  "[svg]": {
-    "editor.defaultFormatter": "jock.svg"
-  },
-  "editor.unicodeHighlight.allowedCharacters": {
-    "–": true
-  },
-  "terminal.integrated.env.osx": {},
-  "workbench.tree.indent": 15,
-  "workbench.tree.renderIndentGuides": "always",
-  "workbench.colorCustomizations": {
-    "tree.indentGuidesStroke": "#05ef3c"
-  }
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "typescript.updateImportsOnFileMove.enabled": "always"
 }
